check_output_canvas_refactor_3.txt
    Checking gcodekit4-designer v0.38.0-alpha (/home/thawkins/Projects/gcodekit4/crates/gcodekit4-designer)
warning: unused import: `SpatialIndex`
 --> crates/gcodekit4-designer/src/canvas.rs:7:36
  |
7 | use super::spatial_index::{Bounds, SpatialIndex};
  |                                    ^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `std::collections::HashMap`
  --> crates/gcodekit4-designer/src/canvas.rs:12:5
   |
12 | use std::collections::HashMap;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0615]: attempted to take value of method `shapes` on type `&Canvas`
   --> crates/gcodekit4-designer/src/canvas.rs:729:25
    |
729 |         for obj in self.shapes.values().filter(|o| o.selected) {
    |                         ^^^^^^ method, not a field
    |
help: use parentheses to call the method
    |
729 |         for obj in self.shapes().values().filter(|o| o.selected) {
    |                               ++

error[E0277]: the trait bound `impl Iterator<Item = u64> + '_: DoubleEndedIterator` is not satisfied
    --> crates/gcodekit4-designer/src/selection_manager.rs:51:43
     |
  51 |         for id in store.draw_order_iter().rev() {
     |                                           ^^^ the trait `DoubleEndedIterator` is not implemented for `impl Iterator<Item = u64> + '_`
     |
note: required by a bound in `rev`
    --> /home/thawkins/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/core/src/iter/traits/iterator.rs:3352:23
     |
3350 |     fn rev(self) -> Rev<Self>
     |        --- required by a bound in this associated function
3351 |     where
3352 |         Self: Sized + DoubleEndedIterator,
     |                       ^^^^^^^^^^^^^^^^^^^ required by this bound in `Iterator::rev`

error[E0277]: the trait bound `impl Iterator<Item = u64> + '_: DoubleEndedIterator` is not satisfied
  --> crates/gcodekit4-designer/src/selection_manager.rs:51:19
   |
51 |         for id in store.draw_order_iter().rev() {
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `DoubleEndedIterator` is not implemented for `impl Iterator<Item = u64> + '_`
   |
   = note: required for `Rev<impl Iterator<Item = u64> + '_>` to implement `Iterator`
   = note: required for `Rev<impl Iterator<Item = u64> + '_>` to implement `IntoIterator`

warning: unused variable: `id`
   --> crates/gcodekit4-designer/src/commands.rs:226:25
    |
226 |                 for (i, id) in cmd.ids.iter().enumerate() {
    |                         ^^ help: if this is intentional, prefix it with an underscore: `_id`
    |
    = note: `#[warn(unused_variables)]` on by default

warning: unused variable: `id`
   --> crates/gcodekit4-designer/src/designer_state.rs:631:21
    |
631 |                 let id = self.canvas.generate_id();
    |                     ^^ help: if this is intentional, prefix it with an underscore: `_id`

Some errors have detailed explanations: E0277, E0615.
For more information about an error, try `rustc --explain E0277`.
warning: `gcodekit4-designer` (lib) generated 4 warnings
error: could not compile `gcodekit4-designer` (lib) due to 3 previous errors; 4 warnings emitted
